--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "SDL"]
-	path = SDL
+[submodule "third_party/SDL"]
+	path = third_party/SDL
 	url = https://github.com/SDL-mirror/SDL.git
